# LifeLuaPSP

./: CMakeLists.txt  README.md
src/: lifecolor.c  lifecontrols.c  lifedebug.c  lifedraw.c  lifefont.c  lifeinit.h  lifemain.c  lifeos.c  lifethread.c  lifevlf.c
src/ext/: lutf8lib.c
